[package]
name = "ic-certified-map"
version = "0.3.0"
edition = "2018"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
description = "Merkleized map data structure."
homepage = "https://docs.rs/ic-certified-map"
documentation = "https://docs.rs/ic-certified-map"
license = "Apache-2.0"
readme = "README.md"
categories = ["data-structures", "cryptography", "cryptography::cryptocurrencies"]
keywords = ["internet-computer", "types", "dfinity", "map"]
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]
repository = "https://github.com/dfinity/cdk-rs"

[dependencies]
serde = "1"
serde_bytes = "0.11"
sha2 = "0.9"

[dev-dependencies]
hex = "0.4"
serde_cbor = "0.11"
