[package]
name = "ic-ledger-types"
version = "0.1.1"
edition = "2018"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
description = "Types for interacting with the ICP ledger canister."
homepage = "https://docs.rs/ic-ledger-types"
documentation = "https://docs.rs/ic-ledger-types"
license = "Apache-2.0"
readme = "README.md"
keywords = ["internet-computer", "ledger"]
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = { path = "../ic-cdk", version = "0.4" }
candid = "0.7.4"
crc32fast = "1.2.0"
hex = "0.4"
serde = "1"
sha2 = "0.9"

