[package]
name = "ic-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.15"
ic-cdk = { path = "../ic-cdk", version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
