[package]
name = "chess_rs"
version = "0.1.0"
authors = ["Hans Larsen <hans@larsen.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { path = "../../../../src/ic-cdk", version = "0.3" }
ic-cdk-macros = { path = "../../../../src/ic-cdk-macros", version = "0.3" }
serde = "1.0.111"
pleco = "0.5.0"
